# vps

./: Cargo.toml  README.md
.github/workflows/: BUILD.yml  CI.yml  DEV.yml  MAIN.yml  RELEASE.yml  TEST.yml  build.yml  main.yml
src/: main.rs  utils.rs
src/command/: help.rs  mod.rs  swap.rs  version.rs  xampp.rs
