[package]
name = "vps"
version = "0.1.5"
edition = "2021"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/vps"
license = "MIT"
homepage = "https://github.com/samirdjelal/vps"
documentation = "https://docs.rs/vps"
keywords = ["vps", "vps-config", "vps-configuration", "config", "configuration"]
description = "VPS Configuration"
exclude = [
	"screenshot/*",
]

[lib]
name = "vps"
path = "src/lib.rs"

[[bin]]
name = "vps"
path = "src/main.rs"

[dependencies]
execute = "0.2.10"
nix = "0.23.1"

[dependencies.dialoguer]
version = "0.10.0"
features = ["editor", "password", "completion", "history"]